--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,10 @@
     <meta name="author" content="DoctorOnCall">
     <meta name="robots" content="index, follow">
     
-    <link rel="stylesheet" href="../stylesheets/tiny-slider.css">
-    <link rel="stylesheet" href="../stylesheets/style.css">
-    <link rel="stylesheet" href="../stylesheets/health-centre-category.css">
-    <link rel="stylesheet" href="../stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="/stylesheets/tiny-slider.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/health-centre-category.css">
+    <link rel="stylesheet" href="/stylesheets/stylesheet.css">
 
     <!-- Favicons-->
     <link rel="shortcut icon" href="https://www.doctoroncall.com.my/images/favicon.ico" type="image/x-icon">
@@ -23,9 +23,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
-    <script src="../javascripts/scroll.js"></script>
-    <script src="../javascripts/accordion.min.js"></script>
-    <script src="../javascripts/tiny-slider.js"></script>
+    <script src="/javascripts/scroll.js"></script>
+    <script src="/javascripts/accordion.min.js"></script>
+    <script src="/javascripts/tiny-slider.js"></script>
   </head>
 
   <body id="body" class="pos-rel health-centre-page">
@@ -591,6 +591,6 @@
     </div>
 
     <!-- Javascript script file -->   
-    <script src="../public/javascripts/init.js"></script>
+    <script src="/javascripts/init.js"></script>
   </body>
 </html>
