--- a/views/software.ejs
+++ b/views/software.ejs
@@ -9,11 +9,11 @@
     <meta name="author" content="DoctorOnCall">
     <meta name="robots" content="index, follow">
     
-    <link rel="stylesheet" href="./stylesheets/tiny-slider.css">
-    <link rel="stylesheet" href="../stylesheets/style.css">
-    <link rel="stylesheet" href="../stylesheets/health-centre-category.css">
-    <link rel="stylesheet" href="../stylesheets/stylesheet.css">
-    <link rel="stylesheet" href="../stylesheets/reppage.css">
+    <link rel="stylesheet" href="/stylesheets/tiny-slider.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/health-centre-category.css">
+    <link rel="stylesheet" href="/stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="/stylesheets/reppage.css">
 
     <!-- Favicons-->
     <link rel="shortcut icon" href="https://www.doctoroncall.com.my/images/favicon.ico" type="image/x-icon">
@@ -24,9 +24,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
-    <script src="../javascripts/scroll.js"></script>
-    <script src="../javascripts/accordion.min.js"></script>
-    <script src="../javascripts/tiny-slider.js"></script>
+    <script src="/javascripts/scroll.js"></script>
+    <script src="/javascripts/accordion.min.js"></script>
+    <script src="/javascripts/tiny-slider.js"></script>
   </head>
 
   <body id="body" class="pos-rel health-centre-page">
@@ -46,7 +46,7 @@
           <div id="burger" class="burger toggle"> <span class="line"></span> <span class="line"></span> <span class="line"></span> </div>
         </div>
         <div class="nav-2 flex-box ai-c fullwidth wrap-1 slide-disable t-05-ease pt-1 pb-1">
-          <div id="logo" class="logo t-05-ease"><img class="fullwidth" style="margin-top: 4.5%;" src="../images/main-images/doc-logo.png" alt /></div>
+          <div id="logo" class="logo t-05-ease"><img class="fullwidth" style="margin-top: 4.5%;" src="/images/main-images/doc-logo.png" alt /></div>
           <div class="search-box">
             <input id="searchInput" autocomplete="off" class="search-bar fullwidth bg-gray-1" placeholder="Search medicine and health screening packages" onfocus="expandSearch()" onfocusout="shrinkSearch()">
           </div>
@@ -393,7 +393,7 @@
         </div>
       </div>
       <div class="vertical-center horizontal-center">
-        <img src="../images/softwares-images/Tele-consult Platform.jpg" alt="Tele-consult Image" class="Tele-consult-image">
+        <img src="/images/softwares-images/Tele-consult Platform.jpg" alt="Tele-consult Image" class="Tele-consult-image">
      </div>
     </div>
 
@@ -420,11 +420,11 @@
     <!-- Review section -->
     <div class="review-banner padding-section" id="eview-section">
       <div class="vertical-center horizontal-center">
-        <img src="../images/softwares-images/teleconsult-dashboard.png" alt="Tele-consult Image" class="teleconsult-dashboard-image">
+        <img src="/images/softwares-images/teleconsult-dashboard.png" alt="Tele-consult Image" class="teleconsult-dashboard-image">
      </div>
      <div class="review-positioning"> 
       <div>
-        <img src="../images/softwares-images/quotation.png" alt="quotation" class="quotation"/>
+        <img src="/images/softwares-images/quotation.png" alt="quotation" class="quotation"/>
         <p class="review-hero-title text-start">Effortless online doctor consultations with same-day prescription delivery. Exceptional personalised customer care. Perfect for hospital owners.</p>
         <p class="review-hero-description">
           <span class="description-bold">John Doe</span>
@@ -446,19 +446,19 @@
       </div>
       <div class="feature-grid">
         <div>
-          <img src="../images/softwares-images/digital-nomad.png" alt="image"/>
+          <img src="/images/softwares-images/digital-nomad.png" alt="image"/>
           <p class="feature-description"><span class="description-bold">Easy-to-use platform: </span>Schedule and conduct tele consultations with ease on our user-friendly interface for your hospital.</p>
         </div>
         <div>
-          <img src="../images/softwares-images/med.png" alt="image"/>
+          <img src="/images/softwares-images/med.png" alt="image"/>
           <p class="feature-description"><span class="description-bold">Prescription and medication delivery: </span>Our service allows you to easily manage and track medication orders, while providing fast and reliable delivery to patients.</p>
         </div>
         <div>
-          <img src="../images/softwares-images/secured-phone.png" alt="image"/>
+          <img src="/images/softwares-images/secured-phone.png" alt="image"/>
           <p class="feature-description"><span class="description-bold">Medical history tracking: </span>Your patients’ medical history are safely stored on our platform, allowing our doctors to provide personalised treatment recommendations.</p>
         </div>
         <div>
-          <img src="../images/softwares-images/digiwallet.png" alt="image"/>
+          <img src="/images/softwares-images/digiwallet.png" alt="image"/>
           <p class="feature-description"><span class="description-bold">Flexible payment options: </span>Partner with us for flexible payment options, including credit cards, e-wallets, and insurance coverage (where applicable).</p>
         </div>                
       </div>
@@ -472,13 +472,13 @@
       <div class="horizontal-center">
         <div class="demo-grid">
           <div>
-            <img src="../images/softwares-images/Demo1.png" alt="Home screen"/>
+            <img src="/images/softwares-images/Demo1.png" alt="Home screen"/>
           </div>
           <div>
-            <img src="../images/softwares-images/Demo2.png" alt="Dashboard"/>
+            <img src="/images/softwares-images/Demo2.png" alt="Dashboard"/>
           </div>
           <div>
-            <img src="../images/softwares-images/Demo3.png" alt="Product Page"/>
+            <img src="/images/softwares-images/Demo3.png" alt="Product Page"/>
           </div>
         </div>
       </div>
@@ -523,7 +523,7 @@
     <footer class="section bg-blue-1 slide-disable t-05-ease sr">
       <div class="wrap-1 pad">
         <div class="footer flex-box desc gap-1 jc-sb cen centralized">
-          <div class="fb-30"> <img class="mb-1" style="width: 6em; filter: brightness(100)" src="../images/main-images/doc-logo.png" alt="">
+          <div class="fb-30"> <img class="mb-1" style="width: 6em; filter: brightness(100)" src="/images/main-images/doc-logo.png" alt="">
             <p>DoctorOnCall is Malaysia's most complete digital healthcare platform to access clinics, pharmacies, hospitals and health laboratories online. DoctorOnCall provides online doctor and specialist consultation via video-call, voice-call, chat, e-pharmacy, health screening, vaccinations, health tests, health forum and health content.</p>
           </div>
           <div>
@@ -563,6 +563,6 @@
     </div>
 
     <!-- Javascript script file -->   
-    <script src="../javascripts/init.js"></script>
+    <script src="/javascripts/init.js"></script>
   </body>
 </html>
