--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,180 +29,23 @@
   </head>
 
   <body id="body" class="pos-rel health-centre-page">
-
+    <!-- Header/Navbar section -->
     <%- include('./partials/header') %>
 
     <!-- Primary Banner section -->
-    <div class="primary-hero-banner padding-section">
-      <div class="primary-hero-content">
-        <p class="primary-hero-title">Step into the future of digital healthcare with our solutions</p>
-        <p class="primary-hero-description">We strive to deliver <strong>better, faster and more accessible</strong> healthcare in this digital era.</p>
-        <button class="learn-more-btn" onclick=scrollToExploreSection()>Learn more</button>
-      </div>
-    </div>
+    <%- include('./partials/index/primary') %>
 
     <!-- Secondary Banner section -->
-    <div class="secondary-hero-banner" id="explore-section">
-      <div class="vertical-end horizontal-start">
-         <img src="../images/main-images/Asset 3.jpg" alt="Nurse Banner" class="nurse-image">
-      </div>
-      <div class="secondary-positioning"> 
-        <div>
-          <p class="secondary-hero-title text-start">
-            Explore Our
-            <br />
-            <span class="secondary-colored-title">Healthcare Solution</span>
-          </p>
-          <p class="secondary-hero-description">Discover the right solution that best suits your business needs.</p>
-        </div>      
-      </div>  
-    </div>
+    <%- include('./partials/index/secondary') %>
 
     <!-- Benefits section -->
-    <div class="benefit-section padding-section">
-
-      <p class="benefit-section-title text-center">How Our Solutions <span class="light-blue-title"> Benefit </span> You</p>
-
-        <div class="benefit-container">
-          <div class="center-benefit-card">
-            <div class="benefit-card">
-              <div class="horizontal-center benefit-image">
-                <img src="../images/main-images/Asset 5.png" alt="Scalable Image">
-              </div>
-              <p class="benefit-card-title"><span class="description-bold">Modular</span></p>
-              <p class="benefit-card-description">Allow clients to <span class="description-bold">customise roll-outs</span> according to business <span class="description-bold">requirements</span></p>
-            </div>
-          </div>
-      
-          <div class="center-benefit-card">
-            <div class="benefit-card">
-              <div class="horizontal-center benefit-image">
-                <img src="../images/main-images/Asset 6.png" alt="Scalable Image">
-              </div>
-              <p class="benefit-card-title"><span class="description-bold">Scalable</span></p>
-              <p class="benefit-card-description">Scale to <span class="description-bold">millions</span> of interactions via compatibility with <span class="description-bold">serverless upgrade path</span></p>
-            </div>
-          </div>
-      
-          <div class="center-benefit-card">
-            <div class="benefit-card">
-              <div class="horizontal-center benefit-image">
-                <img src="../images/main-images/Asset 7.png" alt="Scalable Image">
-              </div>
-              <p class="benefit-card-title"><span class="description-bold">Industry Experience</span></p>
-              <p class="benefit-card-description">Provide actionable health <span class="description-bold">insights</span> as the leading online digital health platform</p>
-            </div>
-          </div>
-        </div> 
-    </div>
+    <%- include('./partials/index/benefit') %>
 
     <!-- Services section -->
-    <div class="service-section padding-section">
-      <p class="service-section-title text-center">Our <span class="light-blue-title">Service</span> Offerings</p>
-      <div class="horizontal-center">
-      <div class="service-card-group">
-
-        <div class="service-card">
-          <div>
-            <img src="../images/main-images/Asset 8.png" class="service-card-image" alt="Telehealth Platform Image">          
-            <p class="service-card-title">Telehealth Platform</p>
-            <p class="service-card-description"> <span class="description-bold">Remote</span> consultations and appointments</p>
-          </div>
-          <a href="/software" class="service-card-learn-more">Learn More</a>
-        </div>        
-        <div class="service-card">
-          <div>
-            <img src="../images/main-images/Asset 9.png" class="service-card-image" alt="B2B and B2C Marketplace Image">
-            <p class="service-card-title">B2B and B2C Marketplace</p>
-            <p class="service-card-description"><span class="description-bold">Search and compare</span> products and services</p>
-          </div>
-          <a href="#" class="service-card-learn-more">Learn More</a>
-        </div>
-        <div class="service-card">          
-          <div>
-            <img src="../images/main-images/Asset 10.png" class="service-card-image" alt="Online Pharmacy Image">
-            <p class="service-card-title">Online Pharmacy</p>
-            <p class="service-card-description">Convenient<span class="description-bold"> prescription orders, refills and delivery</span></p>
-          </div>
-          <a href="#" class="service-card-learn-more">Learn More</a>
-        </div>
-        <div class="service-card">          
-          <div>
-            <img src="../images/main-images/Asset 11.png" class="service-card-image" alt="Mobile App Image">
-            <p class="service-card-title">Mobile App</p>
-            <p class="service-card-description">For <span class="description-bold">easy, on-the-go</span> health management</p>
-          </div>
-          <a href="#" class="service-card-learn-more">Learn More</a>
-        </div>
-        <div class="service-card">          
-          <div>
-            <img src="../images/main-images/Asset 12.png" class="service-card-image" alt="Customer Experience Management Image">
-            <p class="service-card-title">Customer Experience Management (CEM)</p>
-            <p class="service-card-description"><span class="description-bold">Personalised engagement</span> across various <span class="description-bold">touchpoints</span></p>
-          </div>
-          <a href="#" class="service-card-learn-more">Learn More</a>
-        </div>
-        <div class="service-card">          
-          <div>
-            <img src="../images/main-images/Asset 15.png" class="service-card-image" alt="ERP & HIS Integration Image">
-            <p class="service-card-title">ERP & HIS Integration</p>
-            <p class="service-card-description">Integrate your systems <span class="description-bold">seamlessly</span> with our solutions</p>
-          </div>
-          <a href="#" class="service-card-learn-more">Learn More</a>
-        </div>
-        <div class="service-card">
-          <div>
-            <img src="../images/main-images/Asset 16.png" class="service-card-image" alt="Health Centres Image">
-            <p class="service-card-title">Health Centres</p>
-            <p class="service-card-description">Articles, games, quizzes and other <span class="description-bold">educational content</span></p>
-          </div>
-          <a href="#" class="service-card-learn-more">Learn More</a>
-        </div>
-        <div class="service-card">          
-          <div>
-            <img src="../images/main-images/Asset 17.png" class="service-card-image" alt="Website Forum Image">
-            <p class="service-card-title">Website Forum</p>
-            <p class="service-card-description"><span class="description-bold">Connect</span> with fellow <span class="description-bold">patients</span> and healthcare <span class="service-description-bold">professionals</span></p>
-          </div>
-          <a href="#" class="service-card-learn-more">Learn More</a>
-        </div>
-
-      </div>
-    </div>
-    </div>
+    <%- include('./partials/index/service') %>
 
     <!-- Partners section -->
-    <div class="partners-section padding-section">
-      <p class="partners-section-title text-center">Industry <span class="light-blue-title">Partners</span></p>
-      <div class="horizontal-center">
-        <div class="partners-group text-center">
-          <div class="first-partners-row">
-            <div class="partners-row"><img src="../images/main-images/Asset 18.png" alt="CONSTANT Image"></div>            
-            <div class="partners-row"><img src="../images/main-images/Asset 19.png" alt="Abbott Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 20.png" alt="Pharmaniage Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 21.png" alt="DKSH"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 22.png" alt="Pfizer Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 23.png" alt="Takeda Image"></div>
-          </div>
-          <div class="second-partners-row">
-            <div class="partners-row"><img src="../images/main-images/Asset 24.png" alt="MEDICOS Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 25.png" alt="GreenPharm Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 26.png" alt="LifeTree Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 27.png" alt="IHB Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 28.png" alt="GKB Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 29.png" alt="Relove Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 30.png" alt="Lifefactor Image"></div>
-          </div>
-          <div class="third-partners-row">
-            <div class="partners-row"><img src="../images/main-images/Asset 31.png" alt="TrueBioScience Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 32.png" alt="LifeTree Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 33.png" alt="SummerInsightConcept Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 34.png" alt="ZuellingPharma Image"></div>
-            <div class="partners-row"><img src="../images/main-images/Asset 35.png" alt="Neutrovis Image"></div>    
-          </div>          
-        </div>
-      </div>
-    </div>
+    <%- include('./partials/index/partners') %>
     
     <!-- Footer section -->
     <%- include('./partials/footer') %>
