--- a/views/index.ejs
+++ b/views/index.ejs
@@ -451,7 +451,7 @@
             <p class="service-card-title">Telehealth Platform</p>
             <p class="service-card-description"> <span class="description-bold">Remote</span> consultations and appointments</p>
           </div>
-          <a href="/software" class="service-card-learn-more">Learn More</a>
+          <a href="/softwares" class="service-card-learn-more">Learn More</a>
         </div>        
         <div class="service-card">
           <div>
