--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,7 +74,7 @@ body {
 }
 
 .primary-hero-banner::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
