--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,5 +52,6 @@
 
     <!-- Javascript script file -->   
     <script src="/javascripts/init.js"></script>
+    <script src="/contents/lib"></script>
   </body>
 </html>
