added routing logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,78 @@
     <%- include('./partials/index/benefit') %>
 
     <!-- Services section -->
-    <%- include('./partials/index/service') %>
+    <div class="service-section padding-section">
+      <p class="service-section-title text-center">Our <span class="light-blue-title">Service</span> Offerings</p>
+      <div class="horizontal-center">
+      <div class="service-card-group">
+  
+          <div class="service-card">
+          <div>
+              <img src="../images/main-images/Asset 8.png" class="service-card-image" alt="Telehealth Platform Image">          
+              <p class="service-card-title">Telehealth Platform</p>
+              <p class="service-card-description"> <span class="description-bold">Remote</span> consultations and appointments</p>
+          </div>
+          <a href="/softwares/tele_consult_platform" class="service-card-learn-more">Learn More</a>
+          </div>        
+          <div class="service-card">
+          <div>
+              <img src="../images/main-images/Asset 9.png" class="service-card-image" alt="B2B and B2C Marketplace Image">
+              <p class="service-card-title">B2B and B2C Marketplace</p>
+              <p class="service-card-description"><span class="description-bold">Search and compare</span> products and services</p>
+          </div>
+          <a href="/softwares/b2c_b2b_marketplace" class="service-card-learn-more">Learn More</a>
+          </div>
+          <div class="service-card">          
+          <div>
+              <img src="../images/main-images/Asset 10.png" class="service-card-image" alt="Online Pharmacy Image">
+              <p class="service-card-title">Online Pharmacy</p>
+              <p class="service-card-description">Convenient<span class="description-bold"> prescription orders, refills and delivery</span></p>
+          </div>
+          <a href="/softwares/online_pharmacy" class="service-card-learn-more">Learn More</a>
+          </div>
+          <div class="service-card">          
+          <div>
+              <img src="../images/main-images/Asset 11.png" class="service-card-image" alt="Mobile App Image">
+              <p class="service-card-title">Mobile App</p>
+              <p class="service-card-description">For <span class="description-bold">easy, on-the-go</span> health management</p>
+          </div>
+          <a href="/softwares/super_mobile_app" class="service-card-learn-more">Learn More</a>
+          </div>
+          <div class="service-card">          
+          <div>
+              <img src="../images/main-images/Asset 12.png" class="service-card-image" alt="Customer Experience Management Image">
+              <p class="service-card-title">Customer Experience Management (CEM)</p>
+              <p class="service-card-description"><span class="description-bold">Personalised engagement</span> across various <span class="description-bold">touchpoints</span></p>
+          </div>
+          <a href="/softwares/content_management_system" class="service-card-learn-more">Learn More</a>
+          </div>
+          <div class="service-card">          
+          <div>
+              <img src="../images/main-images/Asset 15.png" class="service-card-image" alt="ERP & HIS Integration Image">
+              <p class="service-card-title">ERP & HIS Integration</p>
+              <p class="service-card-description">Integrate your systems <span class="description-bold">seamlessly</span> with our solutions</p>
+          </div>
+          <a href="/softwares/erp_hms" class="service-card-learn-more">Learn More</a>
+          </div>
+          <div class="service-card">
+          <div>
+              <img src="../images/main-images/Asset 16.png" class="service-card-image" alt="Health Centres Image">
+              <p class="service-card-title">Health Centres</p>
+              <p class="service-card-description">Articles, games, quizzes and other <span class="description-bold">educational content</span></p>
+          </div>
+          <a href="/softwares/health_centres" class="service-card-learn-more">Learn More</a>
+          </div>
+          <div class="service-card">          
+          <div>
+              <img src="../images/main-images/Asset 17.png" class="service-card-image" alt="Website Forum Image">
+              <p class="service-card-title">Website Forum</p>
+              <p class="service-card-description"><span class="description-bold">Connect</span> with fellow <span class="description-bold">patients</span> and healthcare <span class="service-description-bold">professionals</span></p>
+          </div>
+          <a href="/softwares/health_forums" class="service-card-learn-more">Learn More</a>
+          </div>
+      </div>
+      </div>
+  </div>
 
     <!-- Partners section -->
     <%- include('./partials/index/partners') %>
