--- a/views/partials/index/service.ejs
+++ b/views/partials/index/service.ejs
@@ -9,7 +9,7 @@
             <p class="service-card-title">Telehealth Platform</p>
             <p class="service-card-description"> <span class="description-bold">Remote</span> consultations and appointments</p>
         </div>
-        <a href="/softwares" class="service-card-learn-more">Learn More</a>
+        <a href="/softwares/tele_consult_platform" class="service-card-learn-more">Learn More</a>
         </div>        
         <div class="service-card">
         <div>
@@ -17,7 +17,7 @@
             <p class="service-card-title">B2B and B2C Marketplace</p>
             <p class="service-card-description"><span class="description-bold">Search and compare</span> products and services</p>
         </div>
-        <a href="#" class="service-card-learn-more">Learn More</a>
+        <a href="/softwares/b2c_b2b_marketplace" class="service-card-learn-more">Learn More</a>
         </div>
         <div class="service-card">          
         <div>
@@ -25,7 +25,7 @@
             <p class="service-card-title">Online Pharmacy</p>
             <p class="service-card-description">Convenient<span class="description-bold"> prescription orders, refills and delivery</span></p>
         </div>
-        <a href="#" class="service-card-learn-more">Learn More</a>
+        <a href="/softwares/online_pharmacy" class="service-card-learn-more">Learn More</a>
         </div>
         <div class="service-card">          
         <div>
@@ -33,7 +33,7 @@
             <p class="service-card-title">Mobile App</p>
             <p class="service-card-description">For <span class="description-bold">easy, on-the-go</span> health management</p>
         </div>
-        <a href="#" class="service-card-learn-more">Learn More</a>
+        <a href="/softwares/super_mobile_app" class="service-card-learn-more">Learn More</a>
         </div>
         <div class="service-card">          
         <div>
@@ -41,7 +41,7 @@
             <p class="service-card-title">Customer Experience Management (CEM)</p>
             <p class="service-card-description"><span class="description-bold">Personalised engagement</span> across various <span class="description-bold">touchpoints</span></p>
         </div>
-        <a href="#" class="service-card-learn-more">Learn More</a>
+        <a href="/softwares/content_management_system" class="service-card-learn-more">Learn More</a>
         </div>
         <div class="service-card">          
         <div>
@@ -49,7 +49,7 @@
             <p class="service-card-title">ERP & HIS Integration</p>
             <p class="service-card-description">Integrate your systems <span class="description-bold">seamlessly</span> with our solutions</p>
         </div>
-        <a href="#" class="service-card-learn-more">Learn More</a>
+        <a href="/softwares/erp_hms" class="service-card-learn-more">Learn More</a>
         </div>
         <div class="service-card">
         <div>
@@ -57,7 +57,7 @@
             <p class="service-card-title">Health Centres</p>
             <p class="service-card-description">Articles, games, quizzes and other <span class="description-bold">educational content</span></p>
         </div>
-        <a href="#" class="service-card-learn-more">Learn More</a>
+        <a href="/softwares/health_centres" class="service-card-learn-more">Learn More</a>
         </div>
         <div class="service-card">          
         <div>
@@ -65,9 +65,8 @@
             <p class="service-card-title">Website Forum</p>
             <p class="service-card-description"><span class="description-bold">Connect</span> with fellow <span class="description-bold">patients</span> and healthcare <span class="service-description-bold">professionals</span></p>
         </div>
-        <a href="#" class="service-card-learn-more">Learn More</a>
+        <a href="/softwares/health_forums" class="service-card-learn-more">Learn More</a>
         </div>
-
     </div>
     </div>
 </div>
