--- a/views/partials/softwares/key-benefit.ejs
+++ b/views/partials/softwares/key-benefit.ejs
@@ -1,18 +1,32 @@
 <div class="key-benefit-hero-banner padding-section" id="key-benefit-section">
     <div class="key-benefit-items"> 
         <div>
-        <span class="key-benefit-hero-description">Design for convenience</span>
+        <span class="key-benefit-hero-description">
+            <%= lib.lang.en.softwares[urlValue].key_selling_points_secondary_title %>
+        </span>
         <p class="key-benefit-hero-title text-start">
-            Upgrade Your Hospital with Out Virtual Consultation
+            <%= lib.lang.en.softwares[urlValue].key_selling_points_primary_title %>
         </p>
         </div>
     </div>        
     <div class="key-benefit-items"> 
         <div class="key-benefit-hero-description">
-        <p><span class="blue-tick">✓</span> Convenient: Remote teleconsultations with licensed GPs reduce facility burden. Offer patients convenient, on-demand care from anywhere with our service.</p>
-        <p><span class="blue-tick">✓</span> Affordable: Reduce medical costs and increase revenue with our cost-effective teleconsultation service for your hospital.</p>
-        <p><span class="blue-tick">✓</span> Secure: Ensure PDPA-compliant, end-to-end encrypted teleconsultation for your hospital's secure and private medical care.</p>
-        <p><span class="blue-tick">✓</span> Reliable: Our licensed General Practitioners provide reliable medical care and accurate treatment recommendations to your patients. Partner with us for experienced professionals you can trust.</p>
+        <p>
+            <span class="blue-tick">✓</span> 
+            <%= lib.lang.en.softwares[urlValue].key_selling_points_description_one %>
+        </p>
+        <p>
+            <span class="blue-tick">✓</span> 
+            <%= lib.lang.en.softwares[urlValue].key_selling_points_description_two %>
+        </p>
+        <p>
+            <span class="blue-tick">✓</span> 
+            <%= lib.lang.en.softwares[urlValue].key_selling_points_description_three %>
+        </p>
+        <p>
+            <span class="blue-tick">✓</span> 
+            <%= lib.lang.en.softwares[urlValue].key_selling_points_description_four %>
+        </p>
         </div>
     </div>
 </div>
