--- a/views/partials/softwares/key-features.ejs
+++ b/views/partials/softwares/key-features.ejs
@@ -1,6 +1,8 @@
 <div class="feature-page padding-section" id="key-features-section">
     <div class="feature-titles-container">
-      <span class="feature-description-title description-bold ">Tele-consult Platform</span>
+      <span class="feature-description-title description-bold ">
+        <%= lib.lang.en.softwares[urlValue].software_title %>
+      </span>
       <p class="feature-title">
         Key Features
       </p>
