--- a/views/partials/softwares/software-section.ejs
+++ b/views/partials/softwares/software-section.ejs
@@ -1,11 +1,11 @@
 <div class="software-hero-banner padding-section" id="software-section">
     <div class="software-positioning"> 
         <div>
-        <p class="software-hero-title text-start">Tele-consult Platform</p>
+        <p class="software-hero-title text-start">
+            <%= lib.lang.en.softwares[urlValue].software_title %>
+        </p>
         <p class="software-hero-description">
-            Instant medical advice from certified physicians - anytime, anywhere. 
-            Say goodbye to long waiting times and book your 
-            online doctor consultation now!
+            <%= lib.lang.en.softwares[urlValue].software_description %>
         </p>
         <div class="banner-buttons">
             <button class="try-now-btn" onclick=scrollToContactUs()>Contact Us</button>
