added new images

--- a/views/partials/softwares/demo/mobiledemo.ejs
+++ b/views/partials/softwares/demo/mobiledemo.ejs
@@ -1,17 +1,17 @@
 <div class="demo-page padding-section" id="demo-section">
     <p class="demo-title text-center">
-      Telehealth In Action!
+        <%= lib.lang.en.softwares[urlValue].demo_title %>
     </p>          
     <div class="horizontal-center">
         <div class="demo-grid">
             <div>
-            <img src="/images/softwares-images/tele_consult_platform/demo_image_one.png" alt="Home screen"/>
+                <img src="/images/softwares-images/tele_consult_platform/demo_image_one.png" alt="Home screen"/>
             </div>
             <div>
-            <img src="/images/softwares-images/tele_consult_platform/demo_image_two.png" alt="Dashboard"/>
+                <img src="/images/softwares-images/tele_consult_platform/demo_image_two.png" alt="Dashboard"/>
             </div>
             <div>
-            <img src="/images/softwares-images/tele_consult_platform/demo_image_three.png" alt="Product Page"/>
+                <img src="/images/softwares-images/tele_consult_platform/demo_image_three.png" alt="Product Page"/>
             </div>
         </div>
     </div>
