--- a/views/partials/softwares/key-features.ejs
+++ b/views/partials/softwares/key-features.ejs
@@ -10,19 +10,39 @@
     <div class="feature-grid">
       <div>
         <img src="/images/softwares-images/tele_consult_platform/key_feature_image_one.png" alt="image"/>
-        <p class="feature-description"><span class="description-bold">Easy-to-use platform: </span>Schedule and conduct tele consultations with ease on our user-friendly interface for your hospital.</p>
+        <p class="feature-description">
+          <span class="description-bold">
+            <%= lib.lang.en.softwares[urlValue].key_feature_bold_description_one %>
+          </span>
+            <%= lib.lang.en.softwares[urlValue].key_feature_description_one %>
+        </p>
       </div>
       <div>
         <img src="/images/softwares-images/tele_consult_platform/key_feature_image_two.png" alt="image"/>
-        <p class="feature-description"><span class="description-bold">Prescription and medication delivery: </span>Our service allows you to easily manage and track medication orders, while providing fast and reliable delivery to patients.</p>
+        <p class="feature-description">
+          <span class="description-bold">
+            <%= lib.lang.en.softwares[urlValue].key_feature_bold_description_two %>
+          </span>
+          <%= lib.lang.en.softwares[urlValue].key_feature_description_two %>
+        </p>
       </div>
       <div>
         <img src="/images/softwares-images/tele_consult_platform/key_feature_image_three.png" alt="image"/>
-        <p class="feature-description"><span class="description-bold">Medical history tracking: </span>Your patients’ medical history are safely stored on our platform, allowing our doctors to provide personalised treatment recommendations.</p>
+        <p class="feature-description">
+          <span class="description-bold">
+            <%= lib.lang.en.softwares[urlValue].key_feature_bold_description_three %>
+          </span>
+          <%= lib.lang.en.softwares[urlValue].key_feature_description_three %>
+        </p>
       </div>
       <div>
         <img src="/images/softwares-images/tele_consult_platform/key_feature_image_four.png" alt="image"/>
-        <p class="feature-description"><span class="description-bold">Flexible payment options: </span>Partner with us for flexible payment options, including credit cards, e-wallets, and insurance coverage (where applicable).</p>
+        <p class="feature-description">
+          <span class="description-bold">
+            <%= lib.lang.en.softwares[urlValue].key_feature_bold_description_four %>
+          </span>
+          <%= lib.lang.en.softwares[urlValue].key_feature_description_four %>
+        </p>
       </div>                
     </div>
   </div>
