added content images

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
         <div id="burger" class="burger toggle"> <span class="line"></span> <span class="line"></span> <span class="line"></span> </div>
         </div>
         <div class="nav-2 flex-box ai-c fullwidth wrap-1 slide-disable t-05-ease pt-1 pb-1">
-        <div id="logo" class="logo t-05-ease"><img class="fullwidth" style="margin-top: 4.5%;" src="../images/main-images/doc-logo.png" alt /></div>
+        <div id="logo" class="logo t-05-ease"><img class="fullwidth" style="margin-top: 4.5%;" src="/images/main-images/doc-logo.png" alt /></div>
         <div class="search-box">
             <input id="searchInput" autocomplete="off" class="search-bar fullwidth bg-gray-1" placeholder="Search medicine and health screening packages" onfocus="expandSearch()" onfocusout="shrinkSearch()">
         </div>
