--- a/views/partials/index/service.ejs
+++ b/views/partials/index/service.ejs
@@ -48,7 +48,7 @@
             <p class="service-card-title">ERP & HIS Integration</p>
             <p class="service-card-description">Integrate your systems <span class="description-bold">seamlessly</span> with our solutions</p>
         </div>
-        <a href="/softwares/erp_hms" class="service-card-learn-more">Learn More</a>
+        <a href="/softwares/erp_his" class="service-card-learn-more">Learn More</a>
         </div>
         <div class="service-card">
         <div>
