--- a/views/partials/softwares/demo/mobiledemo.ejs
+++ b/views/partials/softwares/demo/mobiledemo.ejs
@@ -5,13 +5,13 @@
     <div class="horizontal-center">
         <div class="demo-grid">
             <div>
-                <img src="/images/softwares-images/tele_consult_platform/demo_image_one.png" alt="Home screen"/>
+                <img src="<%= lib.lang.en.softwares[urlValue].demo_image_one %>" alt="Home screen"/>
             </div>
             <div>
-                <img src="/images/softwares-images/tele_consult_platform/demo_image_two.png" alt="Dashboard"/>
+                <img src="<%= lib.lang.en.softwares[urlValue].demo_image_two %>" alt="Dashboard"/>
             </div>
             <div>
-                <img src="/images/softwares-images/tele_consult_platform/demo_image_three.png" alt="Product Page"/>
+                <img src="<%= lib.lang.en.softwares[urlValue].demo_image_three %>" alt="Product Page"/>
             </div>
         </div>
     </div>
