--- a/public/stylesheets/reppage.css
+++ b/public/stylesheets/reppage.css
@@ -4,7 +4,7 @@
     background-size: cover;    
     display: grid;    
     grid-template-columns: 60% 40%;
-    height: 100%;
+    height: 100vh;
     padding-top: 5em;
     padding-bottom: 5em;
     justify-items: center;
@@ -129,7 +129,7 @@
     grid-template-columns: 50% 50%;
     justify-items: center;
     color: #ffff;
-    height: 100%;
+    height: 100vh;
     padding-top: 5em;
     padding-bottom: 5em;
 }
