--- a/public/stylesheets/reppage.css
+++ b/public/stylesheets/reppage.css
@@ -115,7 +115,7 @@
         max-width: 100%;
     }
     .Tele-consult-image {
-        width: 70%;
+        width: 100%;
         padding-bottom: 2em;
     }    
 }
@@ -217,6 +217,7 @@
     background-size: cover;    
     display: grid;    
     grid-template-columns: 40% 60%;
+    gap: 2em;
     height: 100%;
     padding-top: 5em;
     padding-bottom: 5em;
@@ -457,7 +458,7 @@
     background-size: cover;    
     display: grid;
     grid-template-columns: 60% 40%;
-    height: 100%;
+    height: 100vh;
     padding-top: 5em;
     padding-bottom: 5em;
 }
