fixed images error

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/health-centre-category.css">
     <link rel="stylesheet" href="/stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="/stylesheets/reppage.css">
 
     <!-- Favicons-->
     <link rel="shortcut icon" href="https://www.doctoroncall.com.my/images/favicon.ico" type="image/x-icon">
