--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
         <div id="burger" class="burger toggle"> <span class="line"></span> <span class="line"></span> <span class="line"></span> </div>
         </div>
         <div class="nav-2 flex-box ai-c fullwidth wrap-1 slide-disable t-05-ease pt-1 pb-1">
-        <div id="logo" class="logo t-05-ease"><img class="fullwidth" style="margin-top: 4.5%;" src="/images/main-images/doc-logo.png" alt /></div>
+        <div id="logo" class="logo t-05-ease"><img class="fullwidth" style="margin-top: 4.5%;" src="../images/main-images/doc-logo.png" alt /></div>
         <div class="search-box">
             <input id="searchInput" autocomplete="off" class="search-bar fullwidth bg-gray-1" placeholder="Search medicine and health screening packages" onfocus="expandSearch()" onfocusout="shrinkSearch()">
         </div>
@@ -67,7 +67,7 @@
             <div class="pad-05 fb-40">
             <div class="flex-box br-b-blue-1">
                 <h2 class="f-g1-s1">Explore By</h2>
-                <a class="see-all" href="#"><span>SEE ALL</span> <img src="images/main-images/go.svg" alt /></a> </div>
+                <a class="see-all" href="#"><span>SEE ALL</span> <img src="../images/main-images/go.svg" alt /></a> </div>
             <ul class="ls-n flex-box gap-05 fw col2">
                 <li><a href="#" target="_blank"><span>Nutrition</span></a></li>
                 <li><a href="#" target="_blank"><span>Sleep</span></a></li>
@@ -80,7 +80,7 @@
             <div class="pad-05">
             <div class="flex-box br-b-blue-1">
                 <h2 class="f-g1-s1">Trending Categories</h2>
-                <a class="see-all" href="#"><span>SEE ALL</span> <img src="images/main-images/go.svg" alt /></a> </div>
+                <a class="see-all" href="#"><span>SEE ALL</span> <img src="../images/main-images/go.svg" alt /></a> </div>
             <ul class="ls-n flex-box gap-05 col4 fw">
                 <li><a href="#" target="_blank"><span>5-HTP</span></a></li>
                 <li><a href="#" target="_blank"><span>Algae</span></a></li>
@@ -122,7 +122,7 @@
             <div class="pad-05">
             <div class="flex-box br-b-blue-1">
                 <h2 class="f-g1-s1">Categories</h2>
-                <a class="see-all" href="#"><span>SEE ALL</span> <img src="images/main-images/go.svg" alt /></a> </div>
+                <a class="see-all" href="#"><span>SEE ALL</span> <img src="../images/main-images/go.svg" alt /></a> </div>
             <ul class="ls-n flex-box gap-05 col4 fw">
                 <li><a href="#" target="_blank"><span>General Vaccination</span></a></li>
                 <li><a href="#" target="_blank"><span>General Screening</span></a></li>
@@ -161,7 +161,7 @@
             <div class="pad-05">
             <div class="flex-box br-b-blue-1">
                 <h2 class="f-g1-s1">All Specialists</h2>
-                <a class="see-all" href="#"><span>SEE ALL</span> <img src="images/main-images/go.svg" alt /></a> </div>
+                <a class="see-all" href="#"><span>SEE ALL</span> <img src="../images/main-images/go.svg" alt /></a> </div>
             <ul class="ls-n flex-box gap-05 col2 fw">
                 <li><a href="#" target="_blank"><span>Obstetrician &amp; Gynaecologist</span></a></li>
                 <li><a href="#" target="_blank"><span>Fertility Specialist</span></a></li>
@@ -184,7 +184,7 @@
             <div class="pad-05 fb-40">
             <div class="flex-box br-b-blue-1">
                 <h2 class="f-g1-s1">Featured</h2>
-                <a class="see-all" href="#"><span>SEE ALL</span> <img src="images/main-images/go.svg" alt /></a> </div>
+                <a class="see-all" href="#"><span>SEE ALL</span> <img src="../images/main-images/go.svg" alt /></a> </div>
             <ul class="ls-n flex-box gap-05 fw col2">
                 <li><a href="#" target="_blank"><span>Smoking Cessation</span></a></li>
                 <li><a href="#" target="_blank"><span>Pneumococcal Vaccination</span></a></li>
@@ -197,7 +197,7 @@
             <div class="pad-05">
             <div class="flex-box br-b-blue-1">
                 <h2 class="f-g1-s1">Health Articles</h2>
-                <a class="see-all" href="#"><span>SEE ALL</span> <img src="images/main-images/go.svg" alt /></a> </div>
+                <a class="see-all" href="#"><span>SEE ALL</span> <img src="../images/main-images/go.svg" alt /></a> </div>
             <ul class="ls-n flex-box gap-05 col4 fw">
                 <li><a href="index-health-centre-category.html" target="_self"><span>Nutrition</span></a></li>
                 <li><a href="#" target="_blank"><span>Covid-19 Vaccine</span></a></li>
@@ -217,11 +217,11 @@
     <div class="f-g0-s0"><a class="button-blue" href="javascript:void(0)">Forum</a></div>
     <div class="f-g1-s1 fb-100"><a class="button-blue" href="javascript:void(0)">More</a></div>
 </div>
-<div class="breadcrumbs flex-box bg-blue-1 pt-025 pb-025 ai-c"><a href="index.html"><img src="images/main-images/home.svg" class="home" alt /></a><span><img src="images/main-images/next-white.svg" alt=""></span><a href="#">HEALTH CENTRE</a></div>
+<div class="breadcrumbs flex-box bg-blue-1 pt-025 pb-025 ai-c"><a href="index.html"><img src="../images/main-images/home.svg" class="home" alt /></a><span><img src="../images/main-images/next-white.svg" alt=""></span><a href="#">HEALTH CENTRE</a></div>
 </div>
 <div id="nav-4" class="nav-4 pos-fix bg-blue-1 sr flex-box fd-c t-05-ease">
 <div class="flex-box fullwidth ai-c">
-    <div><img class="avatar" src="images/main-images/avatar.svg" alt/></div>
+    <div><img class="avatar" src="../images/main-images/avatar.svg" alt=""></div>
     <div><strong class="hello-user">Hello, Guest!</strong>
     <div><a class="button-white" href="javascript:void(0)">Log In</a><a class="button-white" href="javascript:void(0)">Sign Up</a></div>
     </div>
@@ -303,12 +303,12 @@
     <div><a class="button-blue" href="javascript:void(0)">Panel Doctors</a></div>
     <div><a class="button-blue" href="javascript:void(0)">Contact Us</a></div>
 </div>
-<div class="socmed flex-box col5 f-g0-s0"> <a href="#" target="_blank"><img src="images/main-images/socmed-fb.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-ig.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-tw.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-yt.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-in.svg" alt /></a> </div>
+<div class="socmed flex-box col5 f-g0-s0"> <a href="#" target="_blank"><img src="../images/main-images/socmed-fb.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-ig.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-tw.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-yt.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-in.svg" alt /></a> </div>
 </div>
 <div id="nav-4-slideback" class="nav-4-slideback pos-fix">&nbsp;</div>
 <div class="nav-5 pos-fix bg-white fullwidth main-nav br-t-gray-1 a-767 sr t-05-ease">
     <div class="flex-box ai-c slide-disable col4 fw">
-        <div class="ta-c f-g0-s0"> <img style="width: 25px; margin: 0 auto 0.5em" src="images/main-images/icon-download.svg" alt/> Get App</div>
+        <div class="ta-c f-g0-s0"> <img style="width: 25px; margin: 0 auto 0.5em" src="../images/main-images/icon-download.svg" alt/> Get App</div>
         <div class="ta-c f-g0-s0">
         <svg class="header-login" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25">
             <g transform="translate(-1121 -191)">
