--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="section bg-blue-1 slide-disable t-05-ease sr">
     <div class="wrap-1 pad">
         <div class="footer flex-box desc gap-1 jc-sb cen centralized">
-        <div class="fb-30"> <img class="mb-1" style="width: 6em; filter: brightness(100)" src="/images/main-images/doc-logo.png" alt="">
+        <div class="fb-30"> <img class="mb-1" style="width: 6em; filter: brightness(100)" src="../images/main-images/doc-logo.png" alt="">
             <p>DoctorOnCall is Malaysia's most complete digital healthcare platform to access clinics, pharmacies, hospitals and health laboratories online. DoctorOnCall provides online doctor and specialist consultation via video-call, voice-call, chat, e-pharmacy, health screening, vaccinations, health tests, health forum and health content.</p>
         </div>
         <div>
@@ -23,12 +23,12 @@
             <p class="decoration-none"><a href="https://www.doctoroncall.com">DoctorOnCall Global </a><a href="https://www.doctoroncall.com">DoctorOnCall Marketplace </a><a href="https://www.doctoroncall.com/marketplace">DoctorOnCall B2B </a><a href="/healthcare-ai">DoctorOnCall AI </a><a href="/">DoctorOnCall Indonesia </a><a href="/corporate">Corporate Service</a></p>
             <div class="r-500">
             <h2>Follow Us</h2>
-            <div class="socmed flex-box col5"> <a href="#" target="_blank"><img src="/images/main-images/socmed-fb.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-ig.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-tw.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-yt.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-in.svg" alt /></a> </div>
+            <div class="socmed flex-box col5"> <a href="#" target="_blank"><img src="../images/main-images/socmed-fb.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-ig.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-tw.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-yt.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-in.svg" alt /></a> </div>
             </div>
         </div>
         <div class="dn a-500 mt-1">
             <h2 class="ta-c">Follow Us</h2>
-            <div class="socmed flex-box col5 centralized" style="max-width: 20em"> <a href="#" target="_blank"><img src="images/main-images/socmed-fb.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-ig.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-tw.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-yt.svg" alt /></a> <a href="#" target="_blank"><img src="images/main-images/socmed-in.svg" alt /></a> </div>
+            <div class="socmed flex-box col5 centralized" style="max-width: 20em"> <a href="#" target="_blank"><img src="../images/main-images/socmed-fb.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-ig.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-tw.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-yt.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-in.svg" alt /></a> </div>
         </div>
         </div>
     </div>
