--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,7 +6,7 @@
         </div>
         <div>
             <h2>Our Services</h2>
-            <p class="decoration-none"><a href="/medicine">Order Medicine</a> <a href="/online-doctor">Consult A Doctor</a> <a href="/find-doctor/kuala-lumpur/hospitals">Search Hospitals</a> <a href="/medicine/umrah-hajj-vaccination-packages">Umrah &amp; Hajj Vaccination</a> <a href="/find-doctor">Book Appointment</a> <a href="/health-screening">Health Screening</a> <a href="/promos">Promotions</a> <a href="/medicine/account">Rewards</a> <a href="/find-doctor/vaccination-services">Vaccine Services</a> <a href="/tanya/en">Ask A Question</a></p>
+            <p class="decoration-none no-hover"><a href="/medicine">Order Medicine</a> <a href="/online-doctor">Consult A Doctor</a> <a href="/find-doctor/kuala-lumpur/hospitals">Search Hospitals</a> <a href="/medicine/umrah-hajj-vaccination-packages">Umrah &amp; Hajj Vaccination</a> <a href="/find-doctor">Book Appointment</a> <a href="/health-screening">Health Screening</a> <a href="/promos">Promotions</a> <a href="/medicine/account">Rewards</a> <a href="/find-doctor/vaccination-services">Vaccine Services</a> <a href="/tanya/en">Ask A Question</a></p>
         </div>
         <div>
             <h2>Health Content</h2>
