--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -124,8 +124,8 @@
                 <h2 class="f-g1-s1">Categories</h2>
                 <a class="see-all" href="#"><span>SEE ALL</span> <img src="../images/main-images/go.svg" alt /></a> </div>
             <ul class="ls-n flex-box gap-05 col4 fw">
-                <li><a href="#" target="_blank"><span>General Vaccination</span></a></li>
-                <li><a href="#" target="_blank"><span>General Screening</span></a></li>
+                <li class=""><a href="#" target="_blank"><span>General Vaccination</span></a></li>
+                <li><a href="#" target="_blank"><span class="decoration-none">General Screening</span></a></li>
                 <li><a href="#" target="_blank"><span>Women's Health</span></a></li>
                 <li><a href="#" target="_blank"><span>Covid Test</span></a></li>
                 <li><a href="#" target="_blank"><span>Imaging Test</span></a></li>
@@ -217,7 +217,7 @@
     <div class="f-g0-s0"><a class="button-blue" href="javascript:void(0)">Forum</a></div>
     <div class="f-g1-s1 fb-100"><a class="button-blue" href="javascript:void(0)">More</a></div>
 </div>
-<div class="breadcrumbs flex-box bg-blue-1 pt-025 pb-025 ai-c"><a href="index.html"><img src="../images/main-images/home.svg" class="home" alt /></a><span><img src="../images/main-images/next-white.svg" alt=""></span><a href="#">HEALTH CENTRE</a></div>
+<div class="breadcrumbs flex-box bg-blue-1 pt-025 pb-025 ai-c"><a href="index.html"><img src="../images/main-images/home.svg" class="home" alt /></a><span><img src="../images/main-images/next-white.svg" alt=""></span><a href="#">PRODUCT CATALOGUE</a></div>
 </div>
 <div id="nav-4" class="nav-4 pos-fix bg-blue-1 sr flex-box fd-c t-05-ease">
 <div class="flex-box fullwidth ai-c">
@@ -235,12 +235,12 @@
         </div>
         <div class="ac-panel">
         <ul class="ls-n">
-            <li><a href="index-health-centre-category.html" target="_self"><span>Nutrition</span></a></li>
-            <li><a href="#" target="_blank"><span>Sleep</span></a></li>
-            <li><a href="#" target="_blank"><span>Mental Health</span></a></li>
-            <li><a href="#" target="_blank"><span>Fitness</span></a></li>
-            <li><a href="#" target="_blank"><span>Product Reviews</span></a></li>
-            <li><a href="#" target="_blank"><span>Sexual Health</span></a></li>
+            <li><a href="index-health-centre-category.html" class="no-underline" target="_self"><span>Nutrition</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Sleep</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Mental Health</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Fitness</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Product Reviews</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Sexual Health</span></a></li>
         </ul>
         </div>
     </div>
@@ -249,20 +249,20 @@
         <button class="ac-trigger">Health Services<span>NEW!</span></button>
         </div>
         <div class="ac-panel">
-        <ul class="ls-n">
-            <li><a href="#" target="_blank"><span>General Vaccination</span></a></li>
-            <li><a href="#" target="_blank"><span>General Screening</span></a></li>
-            <li><a href="#" target="_blank"><span>Women's Health</span></a></li>
-            <li><a href="#" target="_blank"><span>Covid Test</span></a></li>
-            <li><a href="#" target="_blank"><span>Imaging Test</span></a></li>
-            <li><a href="#" target="_blank"><span>Influenza Vaccination</span></a></li>
-            <li><a href="#" target="_blank"><span>Cancer Screening</span></a></li>
-            <li><a href="#" target="_blank"><span>Children's Vaccination</span></a></li>
-            <li><a href="#" target="_blank"><span>Dental Care</span></a></li>
-            <li><a href="#" target="_blank"><span>Men's Health</span></a></li>
-            <li><a href="#" target="_blank"><span>Heart Screening</span></a></li>
-            <li><a href="#" target="_blank"><span>Sexual Wellness</span></a></li>
-        </ul>
+            <ul class="ls-n">
+                <li><a href="#" target="_blank" class="no-underline"><span>General Vaccination</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>General Screening</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>Women's Health</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>Covid Test</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>Imaging Test</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>Influenza Vaccination</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>Cancer Screening</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>Children's Vaccination</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>Dental Care</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>Men's Health</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>Heart Screening</span></a></li>
+                <li><a href="#" target="_blank" class="no-underline"><span>Sexual Wellness</span></a></li>
+            </ul>
         </div>
     </div>
     <div class="ac">
@@ -271,8 +271,8 @@
         </div>
         <div class="ac-panel">
         <ul class="ls-n">
-            <li><a href="#" target="_blank"><span>Online GP</span></a></li>
-            <li><a href="#" target="_blank"><span>Book Specialists</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Online GP</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Book Specialists</span></a></li>
         </ul>
         </div>
     </div>
@@ -282,13 +282,13 @@
         </div>
         <div class="ac-panel">
         <ul class="ls-n">
-            <li><a href="#" target="_blank"><span>Smoking Cessation</span></a></li>
-            <li><a href="#" target="_blank"><span>Pneumococcal Vaccination</span></a></li>
-            <li><a href="#" target="_blank"><span>Heart Health</span></a></li>
-            <li><a href="#" target="_blank"><span>Family &amp; Planning</span></a></li>
-            <li><a href="#" target="_blank"><span>Hepatitis C</span></a></li>
-            <li><a href="#" target="_blank"><span>Endometriosis</span></a></li>
-            <li><a href="#" target="_blank"><span>See More...</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Smoking Cessation</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Pneumococcal Vaccination</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Heart Health</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Family &amp; Planning</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Hepatitis C</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>Endometriosis</span></a></li>
+            <li><a href="#" target="_blank" class="no-underline"><span>See More...</span></a></li>
         </ul>
         </div>
     </div>
